tz-local/resource/nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      X-Forwarded-Host: nexus.eks_project.tzcorp.com;
spec:
#  tls:
#    - hosts:
#        - https-wordpress.dooheehong323
#      secretName: default-token-nv5hl
  rules:
#  - host: https-wordpress.dooheehong323
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: wordpress
#            port:
#              number: 30085
  - host: ae06c8888b6ff49bb8b181496593edba-196345690.us-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus
          servicePort: 32169
